fixed css issues on mobile

--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -1,3 +1,4 @@
 .card__image {
   max-width: 100%;
+  width: 100%;
 }
