--- a/src/blocks/show/__cast/__card-card/show__cast-card.css
+++ b/src/blocks/show/__cast/__card-card/show__cast-card.css
@@ -3,4 +3,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 25px 0 0 0;
 }
