--- a/src/blocks/show/__summary/show__summary.css
+++ b/src/blocks/show/__summary/show__summary.css
@@ -7,5 +7,6 @@
 @media screen and (max-width: 770px) {
   .show__summary {
     margin: 25px 0 0 0;
+    width: 80%;
   }
 }
