--- a/src/blocks/show/__title/show__title.css
+++ b/src/blocks/show/__title/show__title.css
@@ -2,5 +2,6 @@
   .show__title {
     max-width: max-content;
     margin: 0 auto;
+    text-align: center;
   }
 }
